<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="144dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:fontFamily="@font/intel_bold"
        android:textSize="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/logoutDetail"
        android:textColor="@color/gray"
        android:fontFamily="@font/intel"
        android:textSize="10dp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            android:layout_width="88dp"
            android:layout_height="32dp"
            android:background="@drawable/button_basic"
            android:fontFamily="@font/intel"
            android:textSize="12dp"
            android:padding="1dp"
            android:textColor="@color/white"
            android:text="@string/logout"
            android:layout_marginRight="8dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="88dp"
            android:layout_height="32dp"
            android:background="@drawable/edittext_basic"
            android:fontFamily="@font/intel"
            android:textSize="12dp"
            android:padding="1dp"
            android:text="@string/cancel"
            android:layout_marginLeft="8dp"/>

    </LinearLayout>




</LinearLayout>