<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MypageActivity">

    <TextView
        android:id="@+id/tv_MyInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/intel_bold"
        android:text="@string/myInfo"
        android:textSize="24dp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/intel_bold"
            android:text="@string/nickname"
            android:textColor="@color/black"
            android:textSize="16dp" />

       <ImageButton
           android:id="@+id/btn_change_nickname"
           android:layout_width="20dp"
           android:layout_height="20dp"
           android:layout_marginLeft="4dp"
           android:background="@drawable/pen"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/intel_regular"
        android:text="@string/email"
        android:textSize="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/btn_activity"
        android:layout_width="280dp"
        android:layout_height="28dp"
        android:padding="0dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/activity"
        android:textSize="14dp"
        android:gravity="center_vertical"
        android:fontFamily="@font/intel"
        android:textColor="@color/black"
        android:background="#00000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        android:layout_marginTop="36dp"/>


    <View
        android:id="@+id/line1"
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_activity" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="280dp"
        android:layout_height="28dp"
        android:padding="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/logout"
        android:textSize="14dp"
        android:gravity="center_vertical"
        android:fontFamily="@font/intel"
        android:textColor="@color/black"
        android:background="#00000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1"/>

    <View
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_logout" />

    <include
        layout="@layout/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>