<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="144dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/NicknameChange"
        android:textColor="@color/black"
        android:fontFamily="@font/intel_bold"
        android:textSize="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"/>


    <EditText
        android:id="@+id/et_changenickname"
        android:layout_width="192dp"
        android:layout_height="28dp"
        android:layout_gravity="center"
        android:background="@drawable/edittext_basic"
        android:fontFamily="@font/intel"
        android:hint="변경할 닉네임을 입력해주세요"
        android:paddingLeft="16dp"
        android:paddingVertical="4dp"
        android:textColor="@color/gray"
        android:textSize="8dp" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text="4자 이상 10자 이내로 입력해주세요"
        android:textColor="@color/warning"
        android:fontFamily="@font/intel"
        android:textSize="7dp"
        android:visibility="invisible"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            android:layout_width="88dp"
            android:layout_height="32dp"
            android:background="@drawable/button_basic"
            android:fontFamily="@font/intel"
            android:textSize="12dp"
            android:gravity="center"
            android:padding="1dp"
            android:textColor="@color/white"
            android:text="@string/confirm"
            android:layout_marginRight="8dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="88dp"
            android:layout_height="32dp"
            android:background="@drawable/edittext_basic"
            android:fontFamily="@font/intel"
            android:textSize="12dp"
            android:gravity="center"
            android:padding="1dp"
            android:text="@string/cancel"
            android:layout_marginLeft="8dp"/>

    </LinearLayout>


</LinearLayout>